--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7355,7 +7355,8 @@ body.front-page{
 										.media-body{
 											padding-left: 1em;
 											position: relative;
-											height: 227px;
+											height: auto;
+											padding-bottom: 60px;
 											padding-top: 0.5em;
 											> span.date-display-single{
 												float: none;
