--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -36,6 +36,63 @@
 		}
 	}
 
+	body.front-page .main-container .box-before.social-media{
+		
+		p {
+		    padding-right: 2em;
+		}
+		
+		.on-the-web a{
+			width: 45px;
+			padding-top: 29px;
+		}
+
+
+		.otw-twitter{
+			a:before{
+				width: 36px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-facebook{
+			a:before{
+				width: 32px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-linkedin{
+			a:before{
+				width: 32px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-youtube{
+			a:before{
+				width: 42px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-flickr{
+			a:before{
+				width: 35px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-slideshare{
+			a:before{
+				width: 30px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+
+	}
+
 	/*Slider Publications*/
 	body.page-tools-and-publications-publications{
 		.slider--video--section{
