--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7054,6 +7054,15 @@ body.newsletter{
     			padding-top: 5px;
     			padding-right: 2em;
 			}
+
+			.field-name-field-participate-upcoming-descr{
+				float: left;
+				width: 70%;
+    			padding-top: 5px;
+    			padding-right: 2em;
+    			color: #FFF;
+			}
+
 			.field-collection-container{
 				float: right;
 				width: 30%;
