--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -72,6 +72,15 @@
 		}
 	}
 
+	.node-type-pa-highlights{
+		.node-pa-highlights.view-mode-full{
+			.field-name-body{
+				float: left;
+	    		width: 100%;
+			}
+		}
+	}
+
 	.popup{
 		width: 155px;
 		left: 27%!important;
