--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8838,8 +8838,20 @@ body.video-page{
 
 		}
 	}
-	.field-name-body .field-item ul{
-		margin-left: 17em;
+}
+
+.node-type-pa-highlights{
+	.node-pa-highlights.view-mode-full{
+		.field-name-field-image{
+			float: left;
+			width: 220px;
+			margin-right: 1em;
+			margin-bottom: 1em;
+		}
+		.field-name-body{
+			float: left;
+    		width: 70%;
+		}
 	}
 }
 
