--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1207,6 +1207,68 @@
     		right: 89px;
     	}
 	} 
+}
+
+
+@media (max-width: 880px) {
+	
+	body.front-page .main-container .box-before.social-media{
+		
+		p {
+		    padding-right: 2em;
+		}
+		
+		.on-the-web a{
+			width: 37px;
+			padding-top: 29px;
+		}
+
+
+		.otw-twitter{
+			a:before{
+				width: 27px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-facebook{
+			a:before{
+				width: 24px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-linkedin{
+			a:before{
+				width: 24px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-youtube{
+			a:before{
+				width: 34px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-flickr{
+			a:before{
+				width: 27px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+		.otw-slideshare{
+			a:before{
+				width: 22px;
+				height: 28px;
+				background-size: contain;
+			}
+		}
+
+	}
 
 
 }
+
