--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7144,6 +7144,8 @@ body.newsletter{
 body.front-page{
 
 	.youtube-video{
+		margin-top: 0; 
+    	margin-right: 0; 
 		.hp-modal-content{
 			padding-bottom: 3em;
 		}
