--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8073,7 +8073,7 @@ body.page-tools-and-publications-publications{
     				margin-bottom: 0;
 				}
 				.field.field-name-field-image{
-					width: auto;
+					width: 118px;
 				    margin-right: 0;
 				    float: left;
 				    min-height: 132px;
