HW20-632 - Events list: Add to my calendar is too much on the right

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1023,7 +1023,7 @@
 		float: none;
 		clear: both;
 		margin-top: 20px;
-		width: 100%;
+		width: 150px;
 	}
 
 	.page-events .region-content #block-system-main .views-row > div{
@@ -1035,8 +1035,13 @@
 		min-height: auto;
 	}
 
+	span.add-to-my-calendar {
+    	margin-left: 0;
+    	float: right
+	}
+
 	.add-to-calendar{
-		margin-left: 108px;
+		margin-left: 0;
 		margin-top: -21px;
 	}
 
