--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -19,11 +19,15 @@
 		}
 
 	}
-
 }
 
 
 @media (max-width: 1200px) {
+
+	/*Events calendar*/
+	span.add-to-my-calendar {
+	 	margin-left: 166px;
+	}
 
 	.intro-splash-20{
 		.views-row-first{
