--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5329,6 +5329,10 @@ body{
 						}
 					}
 
+					.views-field-field-country-code{
+						padding-bottom: 1em;
+					}
+
 					.views-row-last{
 						border-bottom: 0;
 					}
@@ -5345,6 +5349,12 @@ body{
 .views-field-field-start-date-1{
 	padding-top: 0.5em;
 	font-weight: 600;
+}
+
+span.add-to-my-calendar{
+	display: block;
+	float: left;
+	margin-left: 400px;
 }
 
 .add-to-calendar{
