Practical tools - intro text

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8910,3 +8910,11 @@ body.video-page{
 .pane-hwc-good-practice-exchange-gpepbacklink{
 	clear: both;
 }
+
+.container-fluid.practical{
+	background: #FFF;
+	.node-article .content {
+	    margin-top: 0;
+	    margin-bottom: 2em;
+	}
+}
