--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7622,6 +7622,13 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
 .pane-hwc-good-practice-exchange-gpepbacklink {
   clear: both;
 }
+.container-fluid.practical {
+  background: #FFF;
+}
+.container-fluid.practical .node-article .content {
+  margin-top: 0;
+  margin-bottom: 2em;
+}
 .isMobile {
   float: right !important;
 }
