--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -405,13 +405,14 @@ select{
     		justify-content: center;
     		align-items: center;
     		background: #003399;
-    		border: 0;
+    		border: 2px solid #00309d;
     		width: 350px;
     		height: 56px;
     		font-size: 1.8rem;
     		&:hover{
-    			color: #FFF;
-    			background: #335CAD;
+    			color: #00309d;
+    			background: #e5f1ac;
+    			border: 2px solid #00309d;
     		}
 		}
 	}
