--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -336,13 +336,14 @@
 	    		justify-content: center;
 	    		align-items: center;
 	    		background: #003399;
-	    		border: 0;
+	    		border: 2px solid #00309d;
 	    		width: 227px;
 	    		height: 56px;
 	    		font-size: 1.4rem;
 	    		&:hover{
-	    			color: #FFF;
-	    			background: #335CAD;
+	    			color: #00309d;
+	    			background: #e5f1ac;
+	    			border: 2px solid #00309d;
 		    	}
 		    }
 		}
