--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5358,6 +5358,11 @@ span.add-to-my-calendar{
 	margin-left: 400px;
 }
 
+.group-right2 span.add-to-my-calendar{
+	float: none;
+	margin-left: 0;
+}
+
 .add-to-calendar{
     float: right;
     padding-left: 1.5em;
