--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -18702,7 +18702,7 @@ input#edit-field-image-und-0-upload::before {
 .page-national-focal-points #block-system-main .node-article .field-type-text-with-summary p,
 .page-campaign-media-partners #block-system-main .node-article .field-type-text-with-summary p,
 .page-campaign-partners-official-campaign-partners #block-system-main .node-article .field-type-text-with-summary p {
-  text-align: center;
+  text-align: left;
   font-size: 1.2em;
 }
 .page-enterprise-europe-network #block-system-main .node-article .field-type-text-with-summary p:last-child,
