--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -9590,7 +9590,7 @@ input#edit-field-image-und-0-upload::before {
 				width: 67%;
 				margin: 0 auto;
 				p{
-					text-align: center;
+					text-align: left;
     				font-size: 1.2em;
 				}
 				p:last-child{
