HW20-652 - Upload images for About the campaign and Start your campaign

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5616,6 +5616,10 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   float: left;
   margin-right: 1em;
 }
+.float-img-2 {
+  float: left;
+  margin-right: 2em;
+}
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 /* Private Zone */
 .pane-hwc-partner-hwc-partner-profile-title {
