--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6464,6 +6464,11 @@ body.european-week{
 	margin-right: 1em;
 }
 
+.float-img-2{
+	float: left;
+	margin-right: 2em;
+}
+
 
 
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
