--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -579,6 +579,19 @@ header.navbar-default{
 		.col-sm-9{
 			width: 100% !important;
 			a.pull-left{
+				-webkit-transition: all 0.3s;
+				    -moz-transition: all 0.3s;
+				    -ms-transition: all 0.3s;
+				    -o-transition: all 0.3s;
+				    transition: all 0.3s;
+			    	background-image: url("/sites/all/themes/hwc_frontend/images/header/logo-sticky.png");
+			    	display: inline-block;
+				    width: 100px;
+				    height: 77px;
+				    float: left;
+				    background-repeat: no-repeat;
+				    margin-top: 6px;
+				    padding-right: 8em !important;
 				img{
 					-webkit-transition: all 0.3s;
 				    -moz-transition: all 0.3s;
@@ -587,6 +600,7 @@ header.navbar-default{
 				    transition: all 0.3s;
 				    width: 100px !important;
 				    height: 77px !important;
+				    display: none;
 				}
 			}
 			a[title*="EU-OSHA"]{
@@ -637,7 +651,7 @@ header.navbar-default{
 					    transition: all 0.6s;
 				font-size: 1.5em !important;
 			    width: 300px !important;
-			    padding-top: 0.3em !important;
+			    padding-top: 0.5em !important;
 			    padding-left: 0em !important;
 			    float: right !important;
 			    text-align: right !important;
