HW20-694 - Share this on should be the same size as the text

--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -186,7 +186,7 @@ article .hwc-share-widget ul{
 
 .hwc-share-widget ul .share-this-article{
     color: #333;
-    font-size: 1.3rem;
+    font-size: 0.95em;
     font-weight: normal;
 }
 
