--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -17600,6 +17600,7 @@ input#edit-field-image-und-0-upload::before {
   width: 100%;
   height: 564px;
   background-color: black;
+  overflow: hidden;
 }
 .page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .hwc-share-widget {
   border-top: none;
