--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -8411,7 +8411,7 @@ input#edit-field-image-und-0-upload::before {
 						    width: 100%;
 						    height: 564px;
 						    background-color: black;
-						    //background-color: inherit !important;
+						    overflow: hidden;
 						}
 
 						.hwc-share-widget{
