--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8938,3 +8938,8 @@ body.video-page{
 	    margin-bottom: 2em;
 	}
 }
+
+/* Napo film fix width video */
+.video-js .vjs-tech{
+	height: auto !important;
+}
