HW20-672 - Napo films: no MSD related clips are shown

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8943,3 +8943,7 @@ body.video-page{
 .video-js .vjs-tech{
 	height: auto !important;
 }
+
+.vjs-poster {
+    background-position: inherit !important;
+}
