--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7645,6 +7645,9 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
 .video-js .vjs-tech {
   height: auto !important;
 }
+.vjs-poster {
+  background-position: inherit !important;
+}
 .isMobile {
   float: right !important;
 }
