--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -510,7 +510,16 @@ ul.time-and-counters{
 .splash-page{
 	.content-box-before{
 		.box-before{
-			width: 320px;
+			width: 320px;		
+		}
+		.box-before.events{
+			
+				.titlte-news-events{
+					a{
+						font-size: 1em;
+					}
+				}
+			
 		}
 	}
 }
