Fix footer images

--- a/docroot/partner/forms/mvc/view/tpl/entities/fop_start.html
+++ b/docroot/partner/forms/mvc/view/tpl/entities/fop_start.html
@@ -3,7 +3,7 @@
 <div id="headerPrintFriendly">
     <table style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" align="center" bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
-            <td width="100%"><img class="img_scale" src="https://hwc20.healthy-workplaces.eu/sites/all/themes/hwc_frontend/images/imghwccrm/healthy-workplaces.png" alt="Healthy Workplaces Lighten the Load" title="Healthy Workplaces Lighten the Load" style="display: inline-block;" border="0"></td>
+            <td width="100%"><img class="img_scale" src="https://healthy-workplaces.eu/sites/all/themes/hwc_frontend/images/imghwccrm/healthy-workplaces.png" alt="Healthy Workplaces Lighten the Load" title="Healthy Workplaces Lighten the Load" style="display: inline-block;" border="0"></td>
         </tr>
         </tbody></table>
 </div>
