--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5840,11 +5840,19 @@ ul[data-sa-theme="basic-green"].ui-menu{
 body.press-room{
 	.field-name-body{
 		width: 100%;
-		text-align: center;
+		text-align: left;
 		padding: 0.6em 0.5em;
 	}
 	.related-resources-title{
 		padding-top: 1em;
+	}
+	#block-osha-press-release-osha-press-contacts{
+		h2{
+    		font-size: 1.6em;
+		}
+		p{
+			margin-bottom: 0;
+		}
 	}
 }
 
